<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.yawlfoundation</groupId>
        <artifactId>yawl-parent</artifactId>

        <version>6.0.0-GA</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>yawl-ggen</artifactId>
    <packaging>jar</packaging>

    <name>YAWL Code Generation Engine (ggen)</name>
    <description>Deterministic code generation via RDF + SPARQL + Tera templates following GODSPEED methodology. Includes process mining integration for PNML → YAWL spec synthesis.</description>

    <dependencies>
        <!-- RDF & SPARQL Processing (Apache Jena) -->
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-core</artifactId>
            <version>4.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-arq</artifactId>
            <version>4.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-shacl</artifactId>
            <version>4.8.0</version>
        </dependency>

        <!-- JSON Processing (for SPARQL results) -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!-- Servlet API (provided — runtime container supplies it) -->
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.1.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- yawl-graalpy: canonical Java-Python bridge via PythonExecutionEngine -->
        <dependency>
            <groupId>org.yawlfoundation</groupId>
            <artifactId>yawl-graalpy</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- JUNG graph library: in-memory process knowledge graph (OpenSage-inspired memory) -->
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung-api</artifactId>
        </dependency>
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung-graph-impl</artifactId>
        </dependency>

        <!-- Testing — versions inherited from parent BOM (${junit.jupiter.version} = 5.12.0) -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- Override parent's non-standard "src" sourceDirectory to use standard Maven layout -->
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <plugins>
            <!-- Java 25 compiler with explicit preview-feature flag.
                 fork=false uses in-process javac (faster); the compilerArg ensures
                 preview features are enabled regardless of fork mode or CI environment. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>25</release>
                    <parameters>true</parameters>
                    <!-- Use in-process javac -->
                    <fork>false</fork>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Maven Surefire for running tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M9</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                    <!-- Run tests sequentially to avoid parallel-execution reporting artifacts -->
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                </configuration>
            </plugin>

            <!-- Code coverage (version managed by root BOM) -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <!-- Include RDF ontologies, SPARQL queries, templates, polyglot scripts, sandbox resources -->
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.ttl</include>
                    <include>**/*.rdf</include>
                    <include>**/*.sparql</include>
                    <include>**/*.tera</include>
                    <include>**/*.json</include>
                    <include>**/*.py</include>
                    <include>**/*.js</include>
                </includes>
            </resource>
        </resources>

        <testResources>
            <!-- Test fixtures (PNML examples, expected outputs) -->
            <testResource>
                <directory>src/test/resources</directory>
                <includes>
                    <include>**/*.pnml</include>
                    <include>**/*.xes</include>
                    <include>**/*.xml</include>
                    <include>**/*.ttl</include>
                    <include>**/*.json</include>
                </includes>
            </testResource>
        </testResources>
    </build>



</project>
